--- a/wiki/lib/tpl/modified/footer.html
+++ b/wiki/lib/tpl/modified/footer.html
@@ -36,6 +36,18 @@ if ($conf['allowdebug']) {
 }
 ?>
 
+<!-- start of StatCounter Code -->
+<script type="text/javascript">
+sc_project=3570484; 
+sc_invisible=1; 
+sc_partition=39; 
+sc_security="e4a28c86"; 
+</script>
 
+<script type="text/javascript"
+src="http://www.statcounter.com/counter/counter.js"></script><noscript>
+</noscript>
+<!-- End of StatCounter Code -->
 </div>
+
 <?php include(dirname(__FILE__).'/dwtb.html') ?>
